--- a/index.ipynb
+++ b/index.ipynb
@@ -44,13 +44,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "def fib(n):\n",
-    "    return nth_number"
+    "    if n < 1:\n",
+    "        return \"try again\"\n",
+    "    elif n in [1,2]:\n",
+    "            return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)\n",
+    "\n",
+    "# for i in range(1, 10):\n",
+    "#     print(fib(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten(L):\n",
+    "\n",
+    "#### start with base case. ####\n",
+    "    if L == []:\n",
+    "        return L\n",
+    "    \n",
+    "    if isinstance(L[0], list):\n",
+    "        return flatten(L[0]) + flatten(L[1:])\n",
+    "    \n",
+    "    return L[:1] + flatten(L[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.66 µs ± 127 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#L = [1,[2,3,[4,5,6]], 7, [8], [9,10]]\n",
+    "\n",
+    "%timeit flat_list(L)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.11 µs ± 231 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit flat_list(L)"
    ]
   },
   {
@@ -66,13 +128,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "def flat_list(L):\n",
-    "    return flattened"
+    "def flat_list(L, result=[]):\n",
+    "    for i in L:\n",
+    "        if type(i) == list:\n",
+    "            flat_list(i, result)\n",
+    "        else:\n",
+    "            result.append(i)\n",
+    "    return result\n",
+    "L = [1,[2,3,[4,5,6]], 7, [8], [9,10]]\n",
+    "flat_list(L)"
    ]
   },
   {
@@ -118,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
